# RohbotLibCPP

./: CMakeLists.txt  README.md
Source/: CMakeLists.txt
Source/Client/: RohbotClient.cpp  RohbotClient.hpp
Source/Packet/: AuthPacket.hpp  BasePacket.hpp  ChatPacket.hpp  PacketHandler.cpp  PacketHandler.hpp
Source/Room/: Chatroom.cpp  Chatroom.hpp
Source/User/: RohbotUser.cpp  RohbotUser.hpp
Source/Websocket/: Websocket.cpp  Websocket.hpp
